---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
and_or_ternary.py:47:1: PLR1706 [*] Pre-python 2.5 ternary syntax used
   |
45 | # Ternary (Error)
46 | 
47 | 1<2 and 'a' or 'b'
   | ^^^^^^^^^^^^^^^^^^ PLR1706
48 | 
49 | (lambda x: x+1) and 'a' or 'b'
   |
   = help: Use `'a' if 1 < 2 else 'b'`

ℹ Fix
44 44 | 
45 45 | # Ternary (Error)
46 46 | 
47    |-1<2 and 'a' or 'b'
   47 |+'a' if 1 < 2 else 'b'
48 48 | 
49 49 | (lambda x: x+1) and 'a' or 'b'
50 50 | 

and_or_ternary.py:49:1: PLR1706 [*] Pre-python 2.5 ternary syntax used
   |
47 | 1<2 and 'a' or 'b'
48 | 
49 | (lambda x: x+1) and 'a' or 'b'
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLR1706
50 | 
51 | 'a' and (lambda x: x+1) or 'orange'
   |
   = help: Use `'a' if (lambda x: x + 1) else 'b'`

ℹ Fix
46 46 | 
47 47 | 1<2 and 'a' or 'b'
48 48 | 
49    |-(lambda x: x+1) and 'a' or 'b'
   49 |+'a' if (lambda x: x + 1) else 'b'
50 50 | 
51 51 | 'a' and (lambda x: x+1) or 'orange'
52 52 | 

and_or_ternary.py:51:1: PLR1706 [*] Pre-python 2.5 ternary syntax used
   |
49 | (lambda x: x+1) and 'a' or 'b'
50 | 
51 | 'a' and (lambda x: x+1) or 'orange'
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLR1706
52 | 
53 | val = '#0000FF'
   |
   = help: Use `(lambda x: x + 1) if 'a' else 'orange'`

ℹ Fix
48 48 | 
49 49 | (lambda x: x+1) and 'a' or 'b'
50 50 | 
51    |-'a' and (lambda x: x+1) or 'orange'
   51 |+(lambda x: x + 1) if 'a' else 'orange'
52 52 | 
53 53 | val = '#0000FF'
54 54 | (len(val) == 7 and val[0] == "#") or val in {'green'}

and_or_ternary.py:54:1: PLR1706 [*] Pre-python 2.5 ternary syntax used
   |
53 | val = '#0000FF'
54 | (len(val) == 7 and val[0] == "#") or val in {'green'}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLR1706
55 | 
56 | marker = 'marker'
   |
   = help: Use `val[0] == '#' if len(val) == 7 else val in {'green'}`

ℹ Fix
51 51 | 'a' and (lambda x: x+1) or 'orange'
52 52 | 
53 53 | val = '#0000FF'
54    |-(len(val) == 7 and val[0] == "#") or val in {'green'}
   54 |+val[0] == '#' if len(val) == 7 else val in {'green'}
55 55 | 
56 56 | marker = 'marker'
57 57 | isinstance(marker, dict) and 'field' in marker or marker in {}

and_or_ternary.py:57:1: PLR1706 [*] Pre-python 2.5 ternary syntax used
   |
56 | marker = 'marker'
57 | isinstance(marker, dict) and 'field' in marker or marker in {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLR1706
58 | 
59 | def has_oranges(oranges, apples=None) -> bool:
   |
   = help: Use `'field' in marker if isinstance(marker, dict) else marker in {}`

ℹ Fix
54 54 | (len(val) == 7 and val[0] == "#") or val in {'green'}
55 55 | 
56 56 | marker = 'marker'
57    |-isinstance(marker, dict) and 'field' in marker or marker in {}
   57 |+'field' in marker if isinstance(marker, dict) else marker in {}
58 58 | 
59 59 | def has_oranges(oranges, apples=None) -> bool:
60 60 |     return apples and False or oranges

and_or_ternary.py:60:12: PLR1706 [*] Pre-python 2.5 ternary syntax used
   |
59 | def has_oranges(oranges, apples=None) -> bool:
60 |     return apples and False or oranges
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ PLR1706
   |
   = help: Use `False if apples else oranges`

ℹ Fix
57 57 | isinstance(marker, dict) and 'field' in marker or marker in {}
58 58 | 
59 59 | def has_oranges(oranges, apples=None) -> bool:
60    |-    return apples and False or oranges
   60 |+    return False if apples else oranges


